--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 
         :root {
-            --primary-color: #1E88E5;
+            --primary-color: #481062;
             --secondary-color: #64B5F6;
-            --background-color: #F5F9FE;
-            --card-color: #FFFFFF;
+            --background-color: #ffffffd3;
+            --card-color: #ffffffd3;
             --text-color: #333333;
             --light-text: #757575;
-            --accent-color: #FF9800;
+            --accent-color: #ff9800;
             --success-color: #4CAF50;
             --danger-color: #F44336;
             --border-radius: 12px;
@@ -18,11 +18,12 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+         }
 
         body {
-            background-color: var(--background-color);
+            background-image: url(https://img.freepik.com/free-photo/galaxy-planets-digital-art_23-2151727685.jpg?t=st=1741368471~exp=1741372071~hmac=e2feca630aa2f0612207f36ae04ebb9a7fb58dc6975dd2fa40ad4cb6d81ab20d&w=1380);
+            background-size: cover;
+            background-repeat: no-repeat;
             color: var(--text-color);
             min-height: 100vh;
             padding: 20px;
@@ -47,12 +48,14 @@
             align-items: center;
             font-size: 1.8rem;
             font-weight: 700;
-            color: var(--primary-color);
+            color: rgb(255, 255, 255);
+            font-family: "Audiowide", sans-serif;
         }
 
-        .logo i {
+        .logo img {
+            width: 40px;
             margin-right: 10px;
-            color: var(--accent-color);
+            margin-top: 10px;
         }
 
         .search-bar {
@@ -121,6 +124,7 @@
             border-radius: var(--border-radius);
             padding: 25px;
             box-shadow: var(--box-shadow);
+            font-family:"Trirong", serif; 
         }
 
         .current-weather {
